Refactor some lines after mentor review at StreamPractice class and CandidateValidator class